--- a/apps/tiny-rts/index.html
+++ b/apps/tiny-rts/index.html
@@ -5,7 +5,20 @@
     <meta charset="utf-8" />
     <title>Tiny RTS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <style>html,body,#root{height:100%;margin:0}canvas{width:100%;height:100%}</style>
+    <style>
+      html, body, #root {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+      canvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+        outline: none;
+      }
+    </style>
   </head>
   <body>
     <div id="root">
